prevented slideshow images from cropping or extending into header. still need to better center them.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -203,14 +203,17 @@ a:link, a:visited, a:hover, a:active {
 }
 
 /* Slideshow styles */
+#mediaContainer {
+    height: 100%;
+}
+
 .slideshow {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: calc(100% - 85px);
+    height: 100%;
     overflow: hidden; /* Prevent scrolling */
     position: relative;
-    padding: 10px; /* Add padding to prevent overflow */
 }
 
 .slideshow-container {
@@ -225,21 +228,28 @@ a:link, a:visited, a:hover, a:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: calc(100% - 85px); /* Adjust to ensure it doesn't extend into the header */
     position: relative; /* Ensure absolute positioned elements are relative to this container */
     overflow: hidden; /* Prevent overflow */
     margin: 0;
     padding: 0;
 }
 
+.slideshow #slideshowImageContainer img {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
 .slideshow #slideshowDisplayedImage,
 .slideshow #slideshowDisplayedVideo {
-    max-width: 100%;
-    max-height: calc(100% - 85px); /* Adjust height to be 85px smaller */
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%; /* Adjust height to be 85px smaller */
     object-fit: contain; /* Ensure the image/video fits within the container */
+    object-position: center;
 }
 
 .slideshow #controlsContainer {
@@ -288,7 +298,7 @@ a:link, a:visited, a:hover, a:active {
     font-size: 30px;
     background-color: rgba(255, 255, 255, 0.5);
     color: var(--offblack2);
-    margin-left: 50px;
+    margin-left: 30px;
 }
 
 #playPauseButton .fa-play,
